--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 //        codesponsor: 'id',
         search: {
             maxAge: 86400000, // 过期时间，单位毫秒，默认一天
-            paths: auto, // or 'auto'
+//            paths: auto, // or 'auto'
             placeholder: '搜索',
             noData: '找不到结果!',
             // 搜索标题的最大程级, 1 - 6
@@ -63,7 +63,7 @@
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
 <!--<script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>-->
-<script src="//unpkg.com/docsify/lib/plugins/codesponsor.min.js"></script>
+<!--<script src="//unpkg.com/docsify/lib/plugins/codesponsor.min.js"></script>-->
 <script>
     if (typeof navigator.serviceWorker !== 'undefined') {
         navigator.serviceWorker.register('sw.js')
