--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.js"></script>
+<script src="//unpkg.com/docsify/lib/plugins/ga.js"></script>
 <!--<script src="//unpkg.com/docsify/lib/plugins/zoom-image.js"></script>-->
 <!--<script src="//unpkg.com/docsify/lib/plugins/codesponsor.min.js"></script>-->
 <script>
