:memo: :pencil2: :construction: update docs

--- a/index.html
+++ b/index.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>前端开发面试集锦</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+    <meta charset="UTF-8">
+    <title>前端面试集锦</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="keywords" content="interview,resume,frontend,前端,前端工程师,笔试,面试,简历,找工作">
+    <meta name="description" content="前端面试集锦,包括笔试题,面经,简历等找工作方面的知识储备">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="/_media/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/_media//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/_media//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/_media//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/_media//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/_media//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/_media//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/_media//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/_media//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/_media//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/_media//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/_media//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/_media//favicon-16x16.png">
+    <link rel="manifest" href="/_media//manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/_media//ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <nav>
-        <a href="#/interview/">面经</a>
-        <a href="#/questions/">笔试题</a>
-    </nav>
-  <div id="app"></div>
+<nav>
+    <a href="#/questions/">笔试题</a>
+    <a href="#/interview/">面经</a>
+    <a href="#/resume/">简历</a>
+</nav>
+<div id="app"></div>
 </body>
 <script>
     window.$docsify = {
@@ -37,11 +57,11 @@
             function(hook, vm) {
                 hook.beforeEach(function(html) {
                     var url = 'https://github.com/paddingme/Front-end-Web-Development-Interview-Question/blob/master/' + vm.route.file
-                    var editHtml = '<p style="text-align: right">[:memo: Github 上编辑此页面文档](' + url + ')</p>\n'
+                    var editHtml = '<p style="text-align: right">:pencil2: [Github 上编辑此页面文档](' + url + ')</p>\n'
 
                     return html
-//                        + '\n----\n'
-//                        + '最后更新于 {docsify-updated} '
+                        //                        + '\n----\n'
+                        //                        + '最后更新于 {docsify-updated} '
                         + editHtml
                 })
 
