:memo: update docs

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>前端面试集锦</title>
+    <title>前端面试题集锦 - by paddingme</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="keywords" content="interview,resume,frontend,前端,前端工程师,笔试,面试,简历,找工作">
-    <meta name="description" content="前端面试集锦,包括笔试题,面经,简历等找工作方面的知识储备">
+    <meta name="keywords" content="interview,resume,frontend,前端面试题,前端笔试题,前端开发,前端,前端工程师,笔试,面试,简历,找工作">
+    <meta name="description" content="前端面试题集锦,包括前端笔试题,面经,简历等找工作方面的知识储备">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
@@ -33,7 +33,12 @@
     <a href="#/interview/">面经</a>
     <a href="#/resume/">简历</a>
 </nav>
-<div id="app"></div>
+<div id="app">
+    <h1>前端面试题集锦</h1>
+    <h2><a href="#/questions/">前端开发面试题</a></h2>
+    <h2><a href="#/interview/">前端开发面经</a></h2>
+    <h2><a href="#/questions/">前端开发简历</a></h2>
+</div>
 </body>
 <script>
     window.$docsify = {
